--- a/test-page/style.css
+++ b/test-page/style.css
@@ -4,3 +4,42 @@ body {
 	box-sizing: border-box;
 	overflow-x: hidden;
 }
+
+.webgl {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 1;
+}
+
+h1,
+h2,
+p {
+	z-index: 2;
+	color: white;
+	text-align: center;
+}
+
+h1 {
+	position: relative;
+}
+
+.intro {
+	position: relative;
+	font-size: 1.2rem;
+}
+
+h2 {
+	position: absolute;
+	top: 70%;
+	left: 50%;
+	transform: translate(-50%, -25%);
+}
+
+.about {
+	position: absolute;
+	top: 75%;
+	left: 50%;
+	transform: translate(-50%, 0%);
+	min-width: 380px;
+}
