--- a/test-page/style.css
+++ b/test-page/style.css
@@ -3,6 +3,7 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	overflow-x: hidden;
+	background-color: black;
 }
 
 .webgl {
@@ -41,5 +42,6 @@ h2 {
 	top: 75%;
 	left: 50%;
 	transform: translate(-50%, 0%);
-	min-width: 380px;
+	min-width: 310px;
+	width: 90%;
 }
